--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
         "extensions": [".ts", ".tsx"]
       }
     ],
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
