--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^1.3.0",
+    "@types/react-datepicker": "^3.1.3",
     "next": "^10.0.0",
     "react": "17.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
     "styled-components": "^5.2.1",
