--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@hookform/resolvers": "^1.3.0",
     "@types/react-datepicker": "^3.1.3",
+    "@types/react-input-mask": "^3.0.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-datepicker": "^3.4.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-input-mask": "^2.0.4",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
