--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
   },
