--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^1.3.0",
     "@types/react-datepicker": "^3.1.3",
     "@types/react-input-mask": "^3.0.0",
+    "axios": "^0.21.1",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-datepicker": "^3.4.1",
