--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-datepicker": "^3.4.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
     "react-input-mask": "^2.0.4",
